iq_server/error.log
E:\NIT Hamirpur\feat\iq_server\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
index.ts(16,5): error TS7034: Variable 'chatSession' implicitly has type 'any' in some locations where its type cannot be determined.
index.ts(41,29): error TS7006: Parameter 'req' implicitly has an 'any' type.
index.ts(41,34): error TS7006: Parameter 'res' implicitly has an 'any' type.
index.ts(52,14): error TS7005: Variable 'chatSession' implicitly has an 'any' type.
index.ts(66,13): error TS7005: Variable 'chatSession' implicitly has an 'any' type.

    at createTSError (E:\NIT Hamirpur\feat\iq_server\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (E:\NIT Hamirpur\feat\iq_server\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (E:\NIT Hamirpur\feat\iq_server\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (E:\NIT Hamirpur\feat\iq_server\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (E:\NIT Hamirpur\feat\iq_server\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1895:10
    at Object.require.extensions.<computed> [as .ts] (E:\NIT Hamirpur\feat\iq_server\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1465:32)
    at Function._load (node:internal/modules/cjs/loader:1282:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 7034, 7006, 7006, 7005, 7005 ]
}
